# Raspberry_Fans_Control

./: .gitignore  AppInfo.cpp  AppInfo.h  CMakeLists.txt  FanControl_Sys.cpp  FanControl_Sys.h  Paths_Sys.h  README.md  Status_Sys.cpp  Status_Sys.h  Temperature_Sys.cpp  Temperature_Sys.h  main.cpp  run.sh
